Fix toolbar spacing in the widget

--- a/src/styles/components/widget.scss
+++ b/src/styles/components/widget.scss
@@ -162,7 +162,7 @@ $trix-button--icon-size: 1.6em;
                       border-right: none;
                     }
                     &.trix-button--icon-bold {
-                      margin-left: -0.4em;
+                      margin-left: -0.1em;
                     }
                     &.trix-button--icon-link {
                       margin-right: -0.1em;
@@ -197,7 +197,7 @@ $trix-button--icon-size: 1.6em;
             display: block;
             position: absolute;
             top: 80%;
-            left: 50%;
+            left: 43%;
             width: 10px;
             height: 10px;
             background: #ffffff;
